Add button outline class, and fix css font for button, anchor

--- a/example/index.html
+++ b/example/index.html
@@ -7,6 +7,7 @@
 <body>
 <div>
     <a href="#" class="btn default"> Button Default</a>
+    <a href="#" class="btn black"> Button Black</a>
     <a href="#" class="btn primary"> Button Primary</a>
     <a href="#" class="btn success"> Button Success</a>
     <a href="#" class="btn warning"> Button Warning</a>
@@ -14,11 +15,12 @@
 </div>
 <br/>
 <div>
-    <a href="#" class="btn outline default"> Button Default</a>
-    <a href="#" class="btn outline primary"> Button Primary</a>
-    <a href="#" class="btn outline success"> Button Success</a>
-    <a href="#" class="btn outline warning"> Button Warning</a>
-    <a href="#" class="btn outline danger"> Button Danger</a>
+    <button class="btn default outline"> Button Default</button>
+    <button class="btn black outline"> Button Black</button>
+    <button class="btn primary outline"> Button Primary</button>
+    <button class="btn success outline"> Button Success</button>
+    <button class="btn warning outline"> Button Warning</button>
+    <button class="btn danger outline"> Button Danger</button>
 </div>
 </body>
 </html>
