--- a/example/index.html
+++ b/example/index.html
@@ -22,5 +22,23 @@
     <button class="btn warning outline"> Button Warning</button>
     <button class="btn danger outline"> Button Danger</button>
 </div>
+<br/>
+<div>
+    <button class="btn default large"> Button Default</button>
+    <button class="btn black large"> Button Black</button>
+    <button class="btn primary large"> Button Primary</button>
+    <button class="btn success large"> Button Success</button>
+    <button class="btn warning large"> Button Warning</button>
+    <button class="btn danger large"> Button Danger</button>
+</div>
+<br/>
+<div>
+    <button class="btn default large outline"> Button Default</button>
+    <button class="btn black large outline"> Button Black</button>
+    <button class="btn primary large outline"> Button Primary</button>
+    <button class="btn success large outline"> Button Success</button>
+    <button class="btn warning large outline"> Button Warning</button>
+    <button class="btn danger large outline"> Button Danger</button>
+</div>
 </body>
 </html>
