Add table class

--- a/example/index.html
+++ b/example/index.html
@@ -27,18 +27,51 @@
     <button class="btn default large"> Button Default</button>
     <button class="btn black large"> Button Black</button>
     <button class="btn primary large"> Button Primary</button>
-    <button class="btn success large"> Button Success</button>
-    <button class="btn warning large"> Button Warning</button>
-    <button class="btn danger large"> Button Danger</button>
+    <button class="btn success"> Button Success</button>
+    <button class="btn warning"> Button Warning</button>
+    <button class="btn danger"> Button Danger</button>
 </div>
 <br/>
 <div>
     <button class="btn default large outline"> Button Default</button>
     <button class="btn black large outline"> Button Black</button>
     <button class="btn primary large outline"> Button Primary</button>
-    <button class="btn success large outline"> Button Success</button>
-    <button class="btn warning large outline"> Button Warning</button>
-    <button class="btn danger large outline"> Button Danger</button>
+    <button class="btn success outline"> Button Success</button>
+    <button class="btn warning outline"> Button Warning</button>
+    <button class="btn danger outline"> Button Danger</button>
+</div>
+<br/>
+<div>
+<table class='table table-bordered'>
+   <thead>
+      <tr>
+         <th>Test</th>
+         <th>Test</th>
+         <th>Test</th>
+         <th>Test</th>
+      </tr>
+    </thead>
+    <tbody>
+       <tr>
+         <td>Test</td>
+         <td>Test</td>
+         <td>Test</td>
+         <td>Test</td>
+       </tr>
+       <tr>
+         <td>Test</td>
+         <td>Test</td>
+         <td>Test</td>
+         <td>Test</td>
+       </tr>
+       <tr>
+         <td>Test</td>
+         <td>Test</td>
+         <td>Test</td>
+         <td>Test</td>
+       </tr>
+    </tbody>
+</table>    
 </div>
 </body>
 </html>
