Add alert class

--- a/example/index.html
+++ b/example/index.html
@@ -81,5 +81,11 @@
     </tbody>
 </table>    
 </div>
+<div>
+    <div class="alert info"> This is alert </div>
+    <div class="alert success"> This is alert </div>
+    <div class="alert warning"> This is alert </div>
+    <div class="alert danger"> This is alert </div>
+</div>
 </body>
 </html>
