Fix the style difference between anchor and button

--- a/example/index.html
+++ b/example/index.html
@@ -23,12 +23,12 @@
 </div>
 <br/>
 <div>
-    <button class="btn default outline"> Button Default</button>
-    <button class="btn black outline"> Button Black</button>
-    <button class="btn primary outline"> Button Primary</button>
-    <button class="btn success outline"> Button Success</button>
-    <button class="btn warning outline"> Button Warning</button>
-    <button class="btn danger outline"> Button Danger</button>
+    <button class="btn default"> Button Default</button>
+    <button class="btn black"> Button Black</button>
+    <button class="btn primary"> Button Primary</button>
+    <button class="btn success"> Button Success</button>
+    <button class="btn warning"> Button Warning</button>
+    <button class="btn danger"> Button Danger</button>
 </div>
 <br/>
 <div>
