Add grid system

--- a/example/index.html
+++ b/example/index.html
@@ -50,7 +50,7 @@
 </div>
 <br/>
 <div>
-<table class='table table-bordered'>
+<table class='table'>
    <thead>
       <tr>
          <th>Test</th>
@@ -86,6 +86,13 @@
     <div class="alert success"> This is alert </div>
     <div class="alert warning"> This is alert </div>
     <div class="alert danger"> This is alert </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-xs-6"><div class="alert info"> This is alert </div></div>
+        <div class="col-xs-6"><div class="alert danger"> This is alert </div></div>
+    </div>
 </div>
 </body>
 </html>
